<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/destination_home"
      android:icon="@drawable/test_drawable_red"
      android:title="@string/navigate_home" />
    <item
      android:id="@+id/destination_profile"
      android:icon="@drawable/test_drawable_green"
      android:title="@string/navigate_profile" />
    <item
      android:id="@+id/destination_people"
      android:icon="@drawable/test_drawable_blue"
      android:title="@string/navigate_people"
      app:actionLayout="@layout/action_layout" />
    <item
      android:id="@+id/destination_settings"
      android:title="@string/navigate_settings" />
    <item
      android:id="@+id/subheader"
      android:title="@string/subheader">
      <menu>
        <item
          android:id="@+id/subheader_item"
          android:icon="@drawable/test_drawable_red"
          android:title="@string/subheader_item" />
      </menu>
    </item>
    <item
      android:id="@+id/destination_custom"
      app:actionLayout="@layout/action_layout_custom"
      tools:ignore="MenuTitle" />
  </group>
</menu>
