...
     limitations under the License.
-->

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. Note that
         this child does not specify android:layout_gravity attribute. -->
...
         the full height of the container. A
         solid background is used for contrast with the content view.
         android:fitsSystemWindows="true" tells the system to have
         DrawerLayout span the full height of the screen, including the
         system status bar on Lollipop+ versions of the plaform. -->
    <com.google.android.material.testapp.custom.NavigationTestView
        android:id="@+id/start_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#333"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_view_content"
...
